chore: update storybook

--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -2,8 +2,8 @@ import Image from 'next/image'
 import { Meta } from '@storybook/addon-docs'
 import Code from './assets/code-brackets.svg'
 import Colors from './assets/colors.svg'
-import Comments from './assets/comments.svg'
-import Direction from './assets/direction.svg'
+import Reactjs from './assets/reactjs.png'
+import Nextjs from './assets/nextjs.png'
 import Flow from './assets/flow.svg'
 import Plugin from './assets/plugin.svg'
 import Repo from './assets/repo.svg'
@@ -183,15 +183,16 @@ That makes it easy to develop hard-to-reach states. Save these UI states as **st
     href="https://storybook.js.org/tutorials/"
     target="_blank"
   >
-    <Image src={Direction} alt="direction" />
+    <Image src={Nextjs} alt="nextjs" />
     <span>
-      <strong>In-depth guides</strong>
-      Best practices from leading teams
+      <strong>Nextjs</strong>
+      Next.js enables you to create full-stack web applications by extending the
+      latest React features
     </span>
   </a>
   <a
     className="link-item"
-    href="https://github.com/storybookjs/storybook"
+    href="https://github.com/Jolders-Company/jolders_frontend"
     target="_blank"
   >
     <Image src={Code} alt="code" />
@@ -201,7 +202,7 @@ That makes it easy to develop hard-to-reach states. Save these UI states as **st
     </span>
   </a>
   <a className="link-item" href="https://discord.gg/storybook" target="_blank">
-    <Image src={Comments} alt="comments" />
+    <Image src={Reactjs} alt="reactjs" />
     <span>
       <strong>Discord chat</strong>
       Chat with maintainers and the community
